--- a/CSS y WebResponsive/CSS/index.css
+++ b/CSS y WebResponsive/CSS/index.css
@@ -46,7 +46,7 @@
 }
 
 #sec_Secundaria a{
-	font-family: "Dancing Script";
+	/*font-family: "Dancing Script";*/
 	color: white;
 	font-size: 1.5em;
 	text-shadow: 2px 2px 5px #02010a;
